--- a/styles/details.css
+++ b/styles/details.css
@@ -1,5 +1,5 @@
 .details {
-    display: fle;
+    display: flex;
     justify-content: space-evenly;
 }
 
@@ -11,5 +11,9 @@
 
 .assignments {
     padding: 1rem 5rem;
+}
+
+.details__cities {
+    padding: 1rem;
 }
 
