--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,4 @@
-@import "detail.css";
+@import url("./details.css");
 @import url("https://fonts.googleapis.com/css?family=Comfortaa|Patua+One");
 
 /*Typography
